03_infrastructure/02_configs/monitoring/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-grafana
spec:
  parentRefs:
    - name: traefik
      sectionName: monitoring-grafana
      group: gateway.networking.k8s.io/v1
      kind: Gateway
      namespace: traefik-gateway

  hostnames:
    - monitoring-curepipe.duckdns.org

  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /

       backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
